grammer.txt
program     -> statement* EOF
statement   -> varDecl | exprStmt | printStmt | blockStmt | ifStmt | breakStmt | contStmt
varDecl     -> "var" IDENTIFIER ( "=" )
exprStmt    -> expression ";"
printStmt   -> "print" expression ";"
blockStmt   -> "{" declaration "}"
ifStmt      -> "if" "(" expression ")" statement ( "else" statement )?
whileStmt   -> "while" "(" expression ")" statement
forStmt     -> "for" "(" (varDecl | exprStmt | ";" )  expression? ";" expression? ")" statement 
breakStmt   -> "break" ";"
contStmt   -> "continue" ";"

expression  -> assignment 
assignment  -> IDENTIFIER "=" assignment | logic_or
logic_or    -> logic_and ( "or" logic_and )*
logic_and   -> equality ( "and" equality )*
equality    -> comparison ( ( "!=" | "==" ) comparison )* 
comparison  -> term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term        -> factor ( ( "-" | "+" ) factor )* 
factor      -> unary ( ( "/" | "*" ) unary )* 
unary       -> ( "-" | "!" ) unary | call
call        -> primary ( "(" arguments ")")*
arguments   -> expression ( "," expression )*
primary     -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" | IDENTIFIER
